Fix action bar design (#9503)
* Fix action item padding

* Fix style of action item that is not a link

Links need empty href to be styled properly.
Rewrite component to function component.

* Clip too wide action items

* Fix spacing between icon and label

* Add hover background effect

--- a/shared/src/actions/ActionItem.scss
+++ b/shared/src/actions/ActionItem.scss
@@ -1,5 +1,9 @@
 .action-item {
     height: 100%;
+    max-width: 10rem;
+    text-overflow: ellipsis;
+    overflow: hidden;
+
     &__content {
         display: flex;
         align-items: center;
