--- a/web/src/components/Breadcrumb.scss
+++ b/web/src/components/Breadcrumb.scss
@@ -1,5 +1,6 @@
 .breadcrumb {
     display: flex;
+    align-items: center;
 
     .part-directory {
         flex: 1 1 1em;
